--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.RegisterActivity"></activity>
+        <activity android:name=".activity.FindActivity" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:theme="@style/NoTitleBar" />
         <activity
             android:name=".WelcomeActivity"
-            android:theme="@style/NoTitleBar">
+            android:theme="@style/NoTitleNoBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
