--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.RegisterActivity"></activity>
-        <activity android:name=".activity.FindActivity" />
+        <activity android:name=".activity.RechargeActivity"></activity>
+        <activity
+            android:name=".activity.PersonalActivity"
+            android:theme="@style/NoTitleBar" />
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:theme="@style/NoTitleBar" />
+        <activity
+            android:name=".activity.FindActivity"
+            android:theme="@style/NoTitleBar" />
         <activity
             android:name=".activity.LoginActivity"
             android:theme="@style/NoTitleBar" />
