--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.RechargeActivity"></activity>
+        <activity android:name=".activity.NextActivity"></activity>
         <activity
-            android:name=".activity.PersonalActivity"
+            android:name=".MainActivity"
+            android:theme="@style/NoTitleBar" />
+        <activity
+            android:name=".activity.RechargeActivity"
             android:theme="@style/NoTitleBar" />
         <activity
             android:name=".activity.RegisterActivity"
             android:theme="@style/NoTitleBar" />
-        <activity
-            android:name=".activity.FindActivity"
-            android:theme="@style/NoTitleBar" />
+        <activity android:name=".activity.FindActivity" />
         <activity
             android:name=".activity.LoginActivity"
             android:theme="@style/NoTitleBar" />
@@ -31,7 +32,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity" />
     </application>
 
 </manifest>
