--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.NextActivity"></activity>
+        <activity android:name=".activity.RecordActivity"></activity>
+        <activity android:name=".activity.NextActivity" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/NoTitleBar" />
-        <activity
-            android:name=".activity.RechargeActivity"
-            android:theme="@style/NoTitleBar" />
-        <activity
-            android:name=".activity.RegisterActivity"
-            android:theme="@style/NoTitleBar" />
-        <activity android:name=".activity.FindActivity" />
+        <activity android:name=".activity.RechargeActivity" />
+        <activity android:name=".activity.FinishActivity" />
         <activity
             android:name=".activity.LoginActivity"
             android:theme="@style/NoTitleBar" />
