--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,13 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+    implementation 'com.squareup.okio:okio:2.4.3'
+    //okhttputils
+    implementation 'com.zhy:okhttputils:2.6.2'
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 MobSDK {
