--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.RecordActivity"></activity>
+        <activity android:name=".activity.RoomActivity"></activity>
+        <activity android:name=".activity.RecordActivity" />
         <activity android:name=".activity.NextActivity" />
         <activity
             android:name=".MainActivity"
