--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        // cookie
+        maven { url "https://jitpack.io" }
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         // 注册MobSDK
         classpath "com.mob.sdk:MobSDK:2018.0319.1724"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,6 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
