--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-
+    <!--硬件加速-->
+    <!--        android:hardwareAccelerated="true"-->
     <application
         android:name=".ApplicationParam"
         android:allowBackup="true"
