--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:appcompat-v7:29.0.0'
-    implementation 'com.android.support:cardview-v7:29.0.0'
-    implementation 'com.android.support:recyclerview-v7:29.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //cardview
+    implementation 'com.android.support:cardview-v7:29.0.0'
+    //recyclerview
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
     //okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'com.squareup.okio:okio:2.4.3'
