设置头像圆形

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.github.OneGreenHand:PhotoSelect:v1.1'
     //Glide框架
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //roundedimageview
+    implementation 'com.makeramen:roundedimageview:2.3.0'
     //    ShadowLayout
 //    implementation 'com.github.lihangleo2:ShadowLayout:2.0.1'
 }
