--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.mob.sdk'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.zijing.schoolonline"
         minSdkVersion 16
@@ -24,18 +24,18 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.android.support:appcompat-v7:29.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //cardview
-    implementation 'com.android.support:cardview-v7:29.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     //recyclerview
-    implementation 'com.android.support:recyclerview-v7:29.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     //okhttp
-    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
-    implementation 'com.squareup.okio:okio:2.4.3'
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'com.squareup.okio:okio:2.7.0-alpha.lockfree.1'
     //okhttputils
     implementation 'com.zhy:okhttputils:2.6.2'
     //Gson
@@ -49,7 +49,7 @@ dependencies {
     //roundedimageview
     implementation 'com.makeramen:roundedimageview:2.3.0'
     //    ShadowLayout
-//    implementation 'com.github.lihangleo2:ShadowLayout:2.0.1'
+    //    implementation 'com.github.lihangleo2:ShadowLayout:2.0.1'
 }
 
 MobSDK {
