--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,12 @@ buildscript {
     repositories {
         google()
         jcenter()
-        // cookie
         maven { url "https://jitpack.io" }
-
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         // 注册MobSDK
-        classpath "com.mob.sdk:MobSDK:2018.0319.1724"
+        classpath 'com.mob.sdk:MobSDK:+'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
